# attention-probe

./: .gitignore  .hf.env.example  .project.env.example  .ssh_server.env.example  .wandb.env.example  AGENTS.md  AGENT_RULES.md  HISTORY.md  PROJECT.md  README.md  pyproject.toml
rsync/: bootstrap.sh  download.sh  ignore  upload.sh
rsync/lib/: env.sh
scripts/: env_check.sh  run_attention.sh
src/: attention.py  config.yaml
src/attention/: __init__.py
tests/: test_smoke.py
