[project]
name = "attention"
version = "0.1.0"
description = "Attention research scaffold"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
mllm = [
  "accelerate>=0.26",
  "numpy>=1.24",
  "pillow>=10",
  "pyyaml>=6.0",
  "torch",
  "transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
